--- a/index.html
+++ b/index.html
@@ -10,20 +10,25 @@ title: Events for Web Developers
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12 col-sm-4">
+    <div class="col-xs-12 col-sm-3">
       <h3>+= Workshops</h3>
       <p>Plus Equal Tech is our advanced workshop program. These are one day events held on Saturday's in downtown Toronto focusing on giving you a full-day of training on a particular web technology.<br /><br /></p>
       <p><a href="http://plusequaltech.com" class="black-o-btn">Visit Plus Equal</a></p>
     </div>
-    <div class="col-xs-12 col-sm-4">
+    <div class="col-xs-12 col-sm-3">
       <h3>Monthly Meetups</h3>
       <p>Our monthly meetups consit of one or two talks often focused on telling a story about a technical journey. These are after work events to keep you up to date with what's going on in the development scene in Toronto.</p>
       <p><a href="https://www.meetup.com/full-stack-to/" class="black-o-btn">Join our Meetup</a></p>
     </div>
-    <div class="col-xs-12 col-sm-4">
+    <div class="col-xs-12 col-sm-3">
+      <h3>Youth Program</h3>
+      <p>Full Stack Toronto is happy to facilitate CoderDojo Programs across Canada and in Toronto. CoderDojo mentors teach kids to code with live code and industry software. Being a mentor is a great way to give back to the community.</p>
+      <p><a href="http://toronto.coderdojo.ca/" class="black-o-btn">Visit CoderDojo Toronto</a></p>
+    </div>
+    <div class="col-xs-12 col-sm-3">
       <h3>Annual Conference</h3>
-      <p>Every year we gather to bring together entire web teams (front-end, back-end, devops, and UX) to meet each other in an inclusive atmosphere for learning.<br /><br /><br /></p>
-      <p><a href="#" class="black-o-btn">2017 Site Coming Soon</a></p>
+      <p>Every year we gather to bring together entire web teams (front-end, back-end, devops, and UX) to meet each other in an inclusive atmosphere for learning. Join us Oct. 23-24th for two days of amazing content and networking.</p>
+      <p><a href="http://2017.fsto.co" class="black-o-btn">2017 Conference Site</a></p>
     </div>
   </div>
 </div>
