--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: Events for Web Developers
+title: Events for Web Builders
 ---
 <section>
 <div class="container">
@@ -22,7 +22,7 @@ title: Events for Web Developers
     </div>
     <div class="col-xs-12 col-sm-3">
       <h3>Youth Program</h3>
-      <p>Full Stack Toronto is happy to facilitate CoderDojo Programs across Canada and in Toronto. CoderDojo mentors teach kids to code with live code and industry software. Being a mentor is a great way to give back to the community.</p>
+      <p>Full Stack Toronto is happy to facilitate CoderDojo Programs across Canada and in Toronto. CoderDojo teaches kids to code using industry languages and tools. Being a mentor is a great way to give back to the community.</p>
       <p><a href="http://toronto.coderdojo.ca/" class="black-o-btn">Visit CoderDojo Toronto</a></p>
     </div>
     <div class="col-xs-12 col-sm-3">
