--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Events for Web Builders
     <div class="col-xs-12 col-sm-3">
       <h3>+= Workshops</h3>
       <p>Plus Equal Tech is our advanced workshop program. These are one day events held on Saturday's in downtown Toronto focusing on giving you a full-day of training on a particular web technology.<br /><br /></p>
-      <p><a href="http://plusequaltech.com" class="black-o-btn">Visit Plus Equal</a></p>
+      <p><a href="http://plusequaltech.com" class="black-o-btn">Visit Plus Equal Tech</a></p>
     </div>
     <div class="col-xs-12 col-sm-3">
       <h3>Monthly Meetups</h3>
@@ -22,7 +22,7 @@ title: Events for Web Builders
     </div>
     <div class="col-xs-12 col-sm-3">
       <h3>Youth Program</h3>
-      <p>Full Stack Toronto is happy to facilitate CoderDojo Programs across Canada and in Toronto. CoderDojo teaches kids to code using industry languages and tools. Being a mentor is a great way to give back to the community.</p>
+      <p>Full Stack Toronto is happy to facilitate CoderDojo in the GTA. CoderDojoTo provides free &amp; fun workshops to introduce youth to common industry languages and tools. Mentor with this growing initiative to improve your own skills and give back to the community.</p>
       <p><a href="http://toronto.coderdojo.ca/" class="black-o-btn">Visit CoderDojo Toronto</a></p>
     </div>
     <div class="col-xs-12 col-sm-3">
